service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-letsencrypt
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: demo-backend
