ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-letsencrypt
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: demo-tls
      hosts:
        - demo.apps.ocp4.redhat.arrowlabs.be
  rules:
  - host: demo.apps.ocp4.redhat.arrowlabs.be
    http:
      paths:
        - path: /
          backend:
            serviceName: demo-service
            servicePort: 8080
